syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.archi.common.auth";
option java_outer_classname = "RefreshTokenProto";

service RefreshTokenService {
  rpc PostRefreshToken(PostRefreshTokenRequest) returns(PostRefreshTokenResponse);
}

message PostRefreshTokenRequest {
  string refreshToken = 1;
}

message PostRefreshTokenResponse {
  int64 status = 1;
  string message = 2;
  string accessToken = 3;
  string expiresIn = 4;
}